Adding BMP280 code

--- a/build.gradle
+++ b/build.gradle
@@ -36,21 +36,21 @@ dependencies {
     implementation "com.esri.arcgisruntime:arcgis-java:$arcgisVersion"
     natives "com.esri.arcgisruntime:arcgis-java-jnilibs:$arcgisVersion"
     natives "com.esri.arcgisruntime:arcgis-java-resources:$arcgisVersion"
-    // handle SLF4J http://www.slf4j.org/codes.html#StaticLoggerBinder using a no-operation logger
     implementation "org.slf4j:slf4j-nop:2.0.5"
     implementation 'com.pi4j:pi4j-core:2.3.0'
     implementation 'com.pi4j:pi4j-plugin-raspberrypi:2.3.0'
     implementation 'com.pi4j:pi4j-plugin-pigpio:2.3.0'
+    implementation 'com.pi4j:pi4j-plugin-linuxfs:2.3.0'
 }
 
 javafx {
-    version = "17.0.2"
+    version = "17.0.7"
     modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.fxml', 'javafx.web', 'javafx.media' ]
 }
 
 application {
-    mainModule = "com.mycompany.app"
-    mainClass = "com.mycompany.app.App"
+    mainModule = "com.mbcoder.iot.weatherstation"
+    mainClass = "com.mbcoder.iot.weatherstation.Weather_logger"
 }
 
 task copyNatives(type: Copy) {
