--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,8 @@ ext {
 
 repositories {
     mavenCentral()
-    maven {
-        url 'https://esri.jfrog.io/artifactory/arcgis'
-    }
-    maven {
-        url 'https://olympus.esri.com/artifactory/arcgisruntime-repo'
-    }}
+    mavenLocal()
+}
 
 configurations {
     natives
